--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<link rel="icon" href="./assets/favicon.png">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,600,600i" rel="stylesheet">
     </head>
     <body>
